# esp_iot_gateway

./: .gitignore  CMakeLists.txt  Makefile  README.md
main/: CMakeLists.txt  component.mk  gateway_main.c  http_request.c  mqtt_request.c  spi_sensor.c  wifi_connect.c
main/include/: http_request.h  mqtt_request.h  spi_sensor.h  wifi_connect.h
